test/typeerrors/ex12.golden
Building file ../test/typeerrors/ex12.act
  Compiling ex12.act for release

ERROR: Error when compiling ex12 module: Type error
 2:5-12
  |
2 |    env.exit()
  |    ^^^^^^^^
The type t of the indicated expression must satisfy the following unsolvable collection of constraints:
    t must be a subtype of _() -> _

